name:                evolution-hs
version:             0.1.0.0
synopsis:            Evolution Card Game Engine
license:             BSD3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Types,
                       Imports
  build-depends:       base >=4.8 && <4.9,
                       mtl,
                       transformers,
                       text,
                       syb,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       base, evolution-hs, tasty, tasty-QuickCheck
